// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoiQi dnPtoq"
>
  <li
    className="sc-fznJRM evxLXU"
  >
    <span
      className="sc-fznyAO ljNgEp"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznJRM evxLXU"
  >
    <span
      className="sc-fznyAO ljNgEp"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznJRM evxLXU"
  >
    <span
      className="sc-fznyAO ljNgEp"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoiQi dnPtoq"
>
  <li
    className="sc-fznJRM sc-fznWqX KIRcE"
  >
    <span
      className="sc-fznyAO ljNgEp"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznJRM sc-fznWqX KIRcE"
  >
    <span
      className="sc-fznyAO ljNgEp"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznJRM sc-fznWqX KIRcE"
  >
    <span
      className="sc-fznyAO ljNgEp"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
